--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>hello reerkuukuukuu!</title>
 </head>
 <body>
-<h1>hello reerkuukuu!</h1>
+<h1>hello reerkuukuu! maalin wacan</h1>
 </body>
 </html>
